syntax = "proto3";

package hello;

service Hello {
  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc Add(AddRequest) returns (AddResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 sum = 1;
}
